[package]
name = "reproto-backend-rust"
version = "0.1.6"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/reproto/reproto"
homepage = "https://github.com/reproto/reproto"
documentation = "https://docs.rs/reproto-backend-rust"
description = """
Rethinking Protocol Generators
"""

[dependencies]
reproto-backend = {path = "..", version = "0.1"}

log = "0.3"
codeviz_rust = {version = "0.2", path = "../../../codeviz/rust"}
codeviz_macros = {version = "0.2", path = "../../../codeviz/macros"}
